<resources>
    <string name="app_name">Walk To Wake</string>
    <string name="sensor_not_available">Step counter sensor not available!</string>
    <string name="steps">Steps: %1$d</string>
    <string name="create_alarm">Create Alarm</string>
    <string name="repeat_on">Repeat on</string>
    <string name="steps_to_dismiss">Steps to dismiss</string>
    <string name="save">Save</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="floating_add_button">Floating Add Button</string>
    <string name="label">Label</string>
    <string name="dismiss">DISMISS</string>
    <string name="update">Update</string>
    <string name="steps_to_walk">/ %1$d Steps</string>
    <string name="cd_sleeping_cat">Sleeping Cat</string>
    <string name="downward_arrow">Downward Arrow</string>
    <string name="enjoy_your_sleep_nor_tap_below_to_set_an_alarm">Enjoy your sleep!\nOr tap below to set an alarm.</string>
    <string name="no_alarms_yet">No Alarms Yet</string>
    <string name="snooze">SNOOZE</string>
</resources>